# tsfm-models

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  gifteval_curriculum.yaml  gifteval_fixed_mix_tier1.yaml  gifteval_test_overfit.yaml  sanity_features_target.yaml  sanity_kff_driver.yaml  sanity_mixed.yaml  sanity_mv_independent.yaml  sanity_shared_factor.yaml  sanity_sine.yaml  shakedown.yaml  streaming_run.yaml  streaming_synth.yaml
docs/tetris/: implementation_plan.md  tetris_decision_log.html  tetris_pipeline_walkthrough.html  wandb_telemetry.md  workflow.md
docs/tetris/sanity_experiments/: README.md  gifteval_wsl_runs.md  synth_targeted_smoothness_plan.md  synth_v2_quality.md  synth_v2_quality_baseline_H1_1.md
src/tetris/: __init__.py  backend.py  config.py  constants.py  losses.py  masks.py  metrics.py  normalize.py  telescope.py
src/tetris/data/: __init__.py  contract.py  curriculum.py  eval_loader.py  features.py  gifteval_download.py  gifteval_overfit_loader.py  gifteval_pretrain.py  gifteval_train_loader.py  materialize.py  quality_harness.py  sanity.py  sanity_loader.py  shards.py  standin_loader.py  synth_archetype_recipes.py  synth_archetypes.py  synth_explore.py  synth_visual.py  synthetic.py  synthetic_corpus.py  synthetic_targeted.py  synthetic_v2.py  test_profile.py
src/tetris/model/: __init__.py  attention.py  blocks.py  embeddings.py  encoders.py  heads.py  tetris.py  variate_id.py
src/tetris/packing/: __init__.py  collator.py  reservoir.py  scheduler.py
src/tetris/tokenize/: __init__.py  assemble.py  spec.py  window_sampler.py
src/tetris/train/: __init__.py  diagnostics.py  distributed.py  loop.py  overfit_run.py  sanity_plot.py  sanity_run.py  shakedown.py  step.py  tracking.py
tests/: test_aux_boundary.py  test_collator_shapes.py  test_crop_schedule.py  test_curriculum.py  test_distributed.py  test_encoders.py  test_eval_loss.py  test_eval_query_cap.py  test_leaderboard.py  test_losses.py  test_masks.py  test_model_smoke.py  test_normalize.py  test_overfit_loader.py  test_pack_invariance.py  test_reservoir.py  test_s0_smoke.py  test_sanity_mase.py  test_shakedown.py  test_streaming.py  test_synth_archetype_recipes.py  test_synth_archetypes.py  test_synth_explore.py  test_synth_v2.py  test_synthetic.py  test_telescope.py  test_tokenize.py  test_tracking.py  test_train_loader.py
