[project]
name = "tetris"
version = "0.1.0"
description = "TETRIS — TElescoped TRIplets for Irregular Series: a multivariate time-series foundation model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "numpy>=1.26",
    "omegaconf>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tetris"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
